--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,34 @@
 {
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "tailwindCSS.includeLanguages": {
+    "css": "css"
+  },
+  "files.associations": {
+    "*.css": "tailwindcss"
+  },
+  "editor.quickSuggestions": {
+    "strings": true
+  },
+  "css.customData": [
+    {
+      "version": 1.1,
+      "atDirectives": [
+        {
+          "name": "@tailwind",
+          "description": "Use the @tailwind directive to insert Tailwind's base, components, and utilities styles into your CSS."
+        },
+        {
+          "name": "@apply",
+          "description": "Use @apply to inline any existing utility classes into your own custom CSS."
+        },
+        {
+          "name": "@layer",
+          "description": "Use the @layer directive to tell Tailwind which 'bucket' a set of custom styles belong to."
+        }
+      ]
+    }
+  ]
 }
