fix: resolve Lightning wallet WebLN provider errors and enhance settings navigation
- Fix WebLN provider enabling logic in WalletContext to ensure proper initialization
- Add provider.enable() calls before accessing wallet methods to prevent 'provider must be enabled' errors
- Enhance getBalance() and getWalletInfo() methods with proper enabling checks
- Add WalletProvider to TestApp component to fix failing tests
- Clean up unused imports in wallet connection cards
- Improve settings navigation reset when clicking Settings button in nav
- Remove empty test files causing build failures
- Fix Lightning wallet dashboard now properly loads wallet information after login

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,13 @@
   },
   "editor.quickSuggestions": {
     "strings": true
+  },
+  "chat.mcp.serverSampling": {
+    "mkstack-zaptok-labs/.vscode/mcp.json: js-dev": {
+      "allowedModels": [
+        "github.copilot-chat/gpt-4.1",
+        "github.copilot-chat/claude-sonnet-4"
+      ]
+    }
   }
 }
