feat: Enhanced Lightning invoice system with professional preview and payment flow
✨ Major Features Added:
• Professional Lightning invoice preview component with 3 variants (default/compact/detailed)
• Real-time countdown timers and expiry tracking for invoices
• QR code generation using industry-standard qrcode library
• Enhanced QuickZap modal with invoice preview before payment
• Smart payment method selection (WebLN vs Cashu) based on provider capabilities
• Payment provider compatibility detection and user guidance

🔧 Components & Libraries:
• LightningInvoice: Comprehensive invoice display with variants and QR codes
• LightningInvoiceDemo: Development showcase of all component capabilities
• light-bolt11-decoder: Professional Lightning invoice parsing
• qrcode + @types/qrcode: High-quality QR code generation with TypeScript support

⚡ Enhanced Payment Flows:
• WebLN Flow: Invoice request → preview modal → payment confirmation → WebLN execution
• Cashu Flow: Same preview system with unified wallet payment method
• Provider Detection: Automatic detection of Lightning address provider compatibility
• Error Handling: CORS-aware requests with helpful fallback suggestions

🎨 Professional UI/UX:
• Three responsive component variants for different use cases
• Real-time expiry countdown with hours/minutes/seconds display
• Copy-to-clipboard functionality for invoice sharing
• Loading states and error handling throughout
• Dark theme optimized with consistent ZapTok design system

🧪 Testing & Documentation:
• Unit tests for utility functions (formatSats, invoice decoding)
• Comprehensive implementation documentation in LIGHTNING_INVOICE_IMPLEMENTATION.md
• Build verification completed successfully
• Integration testing with existing QuickZap workflow

📦 Dependencies:
• Added light-bolt11-decoder for reliable Lightning invoice parsing
• Added qrcode library for professional QR code generation
• Added @types/qrcode for TypeScript support

This implementation elevates Zap

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "embla-carousel-react": "^8.3.0",
     "immer": "^10.1.1",
     "input-otp": "^1.2.4",
+    "light-bolt11-decoder": "^3.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
