--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^6.3.5",
+    "vite-plugin-pwa": "^1.0.2",
     "vitest": "^3.1.4"
   }
 }
