--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@unhead/react": "^2.0.10",
     "@zxing/browser": "^0.1.5",
     "bech32": "^2.0.0",
+    "blossom-client-sdk": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
