--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "mkstack-zaptok-labs",
+  "name": "ZapTok",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://silentius-satoshi.github.io/ZapTok/",
   "scripts": {
     "dev": "npm i && vite",
     "build": "npm i && vite build && cp dist/index.html dist/404.html",
