feat: Add comprehensive NUTS compliance testing infrastructure
- Add NUTS compliance verification script (src/test/nuts-compliance.test.js)
  * Verifies @cashu/cashu-ts v2.6.0 supports NUT-11/NUT-12/NUT-10
  * Tests P2PK secret generation and format compliance
  * Validates library version compatibility

- Add P2PK format compatibility testing (src/test/p2pk-format.test.js)
  * Tests P2PK secret format consistency across generations
  * Verifies NUT-11 specification compliance
  * Ensures library generates correct ["P2PK", {nonce, data, tags}] format

- Update package.json with specialized test scripts
  * npm run test:nuts - NUTS compliance verification
  * npm run test:p2pk - P2PK format compatibility testing
  * npm run test:cashu - Run all Cashu-related tests

- Add comprehensive test documentation (src/test/README.md)
  * Documents all test files and their purposes
  * Provides usage instructions for NUTS compliance testing
  * Integrates with existing test infrastructure

This establishes permanent testing infrastructure for ongoing NUTS protocol
compliance verification, supporting Phase 2 of NUTS_COMPLIANCE_ANALYSIS.md
migration path.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "dev": "npm i && vite",
     "build": "npm i && vite build && cp dist/index.html dist/404.html",
     "test": "npm i && tsc -p tsconfig.app.json --noEmit && eslint && vitest run && vite build",
+    "test:nuts": "node src/test/nuts-compliance.test.js",
+    "test:p2pk": "node src/test/p2pk-format.test.js",
+    "test:cashu": "npm run test:nuts && npm run test:p2pk",
     "deploy": "npm run build && npx -y nostr-deploy-cli deploy --skip-setup"
   },
   "dependencies": {
