feat: implement hybrid Blossom upload approach with NIP-B7 foundation
- Simplified CustomBlossomUploader with reliable primary+fallback server strategy
- Restored working video upload functionality using primal.net and stacker.news
- Preserved comprehensive NIP-B7 server list management in dormant state
- Added complete BlossomServerListSettings component (267 lines) for future activation
- Implemented useBlossomServerList hook (222 lines) with server publishing/prioritization
- Added useBlossomMediaRetrieval hook (108 lines) with BUD-03 compliant fallback
- Enhanced BlossomSettings with tabbed interface for NIP-B7 and legacy options
- Maintained clean separation between simple reliable uploads and advanced features
- All NIP-B7 components ready for activation when server ecosystem matures

This hybrid approach ensures immediate upload reliability while preserving
all advanced decentralized server selection capabilities for future use.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@cashu/cashu-ts": "^2.5.2",
     "@cashu/crypto": "^0.3.4",
     "@getalby/bitcoin-connect-react": "^3.10.0",
+    "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.9.0",
     "@noble/hashes": "^1.8.0",
     "@noble/secp256k1": "^2.3.0",
