--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@cashu/cashu-ts": "^2.5.2",
     "@cashu/crypto": "^0.3.4",
     "@getalby/bitcoin-connect-react": "^3.10.0",
+    "@getalby/lightning-tools": "^6.0.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.9.0",
     "@noble/hashes": "^1.8.0",
@@ -53,6 +54,7 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@scure/base": "^2.0.0",
     "@tanstack/react-query": "^5.56.2",
     "@unhead/addons": "^2.0.10",
     "@unhead/react": "^2.0.10",
@@ -63,6 +65,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dayjs": "^1.11.18",
     "embla-carousel-react": "^8.3.0",
     "immer": "^10.1.1",
     "input-otp": "^1.2.4",
@@ -86,6 +89,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^0.9.3",
+    "webln": "^0.3.2",
     "zod": "^3.25.71",
     "zustand": "^5.0.6"
   },
