feat: comprehensive NIP-05 verification infrastructure
🔐 Core Infrastructure:
- Add public/.well-known/nostr.json with example mapping for _@zaptok.social
- Create useNip05Verification hook with real-time validation and error handling
- Add Nip05Badge and Nip05VerificationMark UI components with loading states
- Implement automated test scripts (test-nip05.js and verify-nip05.js)

🌐 Deployment Configuration:
- Update vercel.json with proper rewrite rules and CORS headers
- Add Content-Type application/json headers for NIP-05 endpoint
- Configure static file serving for /.well-known/nostr.json

✅ User Freedom & Choice:
- Remove automatic @zaptok.social assignment from onboarding flows
- Update placeholders to generic 'your-name@your-domain.com' format
- Allow users to set their own NIP-05 identifiers from any domain
- Preserve user autonomy while providing infrastructure example

📦 Package & Testing:
- Fix package.json name from 'ZapTok' to 'zaptok' for npm compliance
- Add npm scripts: test:nip05 and verify:nip05 for validation
- Update test files to use generic domain examples

📚 Documentation:
- Move NIP-05-VERIFICATION-GUIDE.md to public/guides/ for accessibility
- Include verification steps, troubleshooting, and manual testing instructions
- Document infrastructure setup and validation procedures

🎯 Ready for Production:
- Infrastructure supports both example domain and user-owned domains
- Verification components handle loading states and error conditions
- Test scripts validate endpoint accessibility and JSON structure
- Full interoperability with Nostr clients (Primal, Damus, Snort)

Users can now set NIP-05 identifiers from any domain they control while having
access to comprehensive verification infrastructure and testing tools.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ZapTok",
+  "name": "zaptok",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +13,8 @@
     "test:nut11": "node src/test/nut-11-signature.test.js",
     "test:mint-compatibility": "node src/test/mint-compatibility.test.js",
     "test:cashu": "npm run test:nuts && npm run test:p2pk && npm run test:nut11 && npm run test:mint-compatibility",
+    "test:nip05": "node scripts/test-nip05.js",
+    "verify:nip05": "node scripts/verify-nip05.js",
     "deploy": "npm run build && npx -y nostr-deploy-cli deploy --skip-setup"
   },
   "dependencies": {
