--- a/vercel.json
+++ b/vercel.json
@@ -58,5 +58,11 @@
       "destination": "/",
       "permanent": true
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/.well-known/nostr.json",
+      "destination": "/.well-known/nostr.json"
+    }
   ]
 }
