feat: implement server-side Bitcoin price proxy
- Add /api/bitcoin-price endpoint with Mempool.space primary + CoinGecko fallback
- Fix CoinGecko API blocking issues during browser extension login
- Update useBitcoinPrice hook to use new server-side endpoint
- Add comprehensive error handling with static fallback prices
- Configure Vercel function with 10s timeout and 5min caching
- Upgrade @vercel/node dependency (v2.3.0 → v5.3.23)
- Tested: Mempool.space primary (✓), CoinGecko fallback (✓), static fallback (✓)

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
+  "functions": {
+    "api/bitcoin-price.ts": {
+      "maxDuration": 10
+    }
+  },
   "headers": [
     {
       "source": "/.well-known/nostr.json",
@@ -6,6 +11,23 @@
         {
           "key": "Content-Type",
           "value": "application/json"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET"
+        }
+      ]
+    },
+    {
+      "source": "/api/bitcoin-price",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=300, stale-while-revalidate=86400"
         },
         {
           "key": "Access-Control-Allow-Origin",
