--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "nostr-tools": "^2.15.1",
+    "qr-code-styling": "^1.9.2",
+    "qr-scanner": "^1.4.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
