--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "dataloader": "^2.2.3",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.18",
     "embla-carousel-react": "^8.3.0",
