--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "input-otp": "^1.2.4",
     "light-bolt11-decoder": "^3.2.0",
     "lodash": "^4.17.21",
+    "lru-cache": "^11.2.2",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "nostr-tools": "^2.15.1",
