feat(auth): complete Welshman bunker QR login with Nostrify integration
Implement full end-to-end QR code authentication using Welshman bunker
protocol with seamless Nostrify session integration.

Core Implementation:
- useWelshmanBunkerLogin.ts - Complete bunker login hook
- useWelshmanBunkerRestoration.ts - Session persistence across refreshes
- BunkerLogin.tsx - QR code UI component with manual input support
- SignInModal.tsx - Updated with onLoginSuccess callback

Key Features:
- QR code generation with proper nostrconnect URL parameters
- Mobile detection and PWA-aware tab management
- Broker polling with timeout handling
- Dual-session management (Welshman + Nostrify)
- Automatic modal close on successful login
- LocalStorage session persistence

Critical Fixes:
- Add required 'url' and 'name' parameters to QR connection string
  * Fixes 'bad connection string' error from nsec.app
- Convert clientSecret from hex to nsec format using nip19.nsecEncode()
  * Fixes 'Invalid checksum in nsec10000...' errors
  * Ensures Nostrify compatibility with bech32-encoded keys
- Integrate Welshman and Nostrify login systems
  * Call addLogin() and setLogin() after Welshman loginWithNip46()
  * Enables useCurrentUser() to detect logged-in user
  * Triggers automatic modal close and redirect

Technical Details:
- clientSecret is session encryption key, NOT user identity
- User pubkey from bunker signer preserved as account identity
- Standard 'bunker' login type for Nostrify compatibility
- Comprehensive debug logging for troubleshooting

Tested:
- QR scan with nsec.app mobile ✅
- Approval detection and pubkey extraction ✅
- Dual-session creation ✅
- Automatic modal close ✅
- Redirect to main app ✅
- Session persistence ✅

--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "@tanstack/react-query": "^5.56.2",
     "@unhead/addons": "^2.0.10",
     "@unhead/react": "^2.0.10",
+    "@welshman/app": "^0.5.1",
+    "@welshman/signer": "^0.5.1",
+    "@welshman/util": "^0.5.1",
     "@zxing/browser": "^0.1.5",
     "bech32": "^2.0.0",
     "blossom-client-sdk": "^4.1.0",
