--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0",
     "vaul": "^0.9.3",
+    "web-push": "^3.6.7",
     "webln": "^0.3.2",
     "zod": "^3.25.71",
     "zustand": "^5.0.6"
@@ -117,6 +118,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^10.0.0",
+    "@types/web-push": "^3.6.4",
     "@vercel/node": "^2.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
