docs: consolidate documentation and update gitignore
- Consolidate 7 notification docs into single NATIVE_NOTIFICATIONS.md
- Remove redundant implementation docs (jumble, lightning invoice, etc.)
- Move UI_LAYOUT_GUIDELINES.md to guides folder
- Add api/, scripts/, .github/, .vscode/, vercel.json, stack.json to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ dist-ssr
 .env
 .env.*
 !.env.example
+
+# Documentation and configuration folders
+api/
+scripts/
+.github/
+.vscode/
+
+# Configuration files
+vercel.json
+stack.json
