--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.18",
     "embla-carousel-react": "^8.3.0",
+    "flexsearch": "^0.8.212",
     "immer": "^10.1.1",
     "input-otp": "^1.2.4",
     "light-bolt11-decoder": "^3.2.0",
@@ -113,6 +114,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/flexsearch": "^0.7.6",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.5.5",
     "@types/qrcode": "^1.5.5",
