--- a/package.json
+++ b/package.json
@@ -104,6 +104,9 @@
     "vaul": "^0.9.3",
     "web-push": "^3.6.7",
     "webln": "^0.3.2",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
     "zod": "^3.25.71",
     "zustand": "^5.0.6"
   },
