--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@noble/hashes": "^1.8.0",
     "@noble/secp256k1": "^2.3.0",
-    "@nostr/tools": "npm:@jsr/nostr__tools@^2.16.2",
+    "@nostr/tools": "npm:@jsr/nostr__tools@2.17.0",
     "@nostrify/nostrify": "npm:@jsr/nostrify__nostrify@^0.46.1",
     "@nostrify/react": "npm:@jsr/nostrify__react@^0.2.5",
     "@radix-ui/react-accordion": "^1.2.0",
