fix(config): correct .gitignore to track essential project files
Remove overly broad gitignore rules that were preventing important
files from being tracked:

Removed from .gitignore:
- .github/ (GitHub Actions workflows need to be tracked)
- .vscode/ (partially - now allows extensions.json)
- api/ (Vercel serverless functions)
- scripts/ (test and utility scripts)
- vercel.json (deployment configuration)
- stack.json (project configuration)

Added to .gitignore:
- dev-dist (Vite development build directory)

This ensures CI/CD configs, deployment settings, and development
tooling are properly version controlled.

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+dev-dist
 *.local
+.env
 
 # Editor directories and files
+.vscode/*
+!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
@@ -21,20 +25,4 @@ dist-ssr
 *.sln
 *.sw?
 
-# Vercel
 .vercel
-
-# Secrets
-.env
-.env.*
-!.env.example
-
-# Documentation and configuration folders
-api/
-scripts/
-.github/
-.vscode/
-
-# Configuration files
-vercel.json
-stack.json
