fix(vercel): fetch tags during build for version display
Add buildCommand to fetch tags so vite.config.ts can read version
from git tags during Vercel deployment.

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "buildCommand": "git fetch --unshallow --tags && npm run build",
   "headers": [
     {
       "source": "/.well-known/nostr.json",
