--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "zaptok",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "license": "AGPL-3.0-or-later",
   "homepage": "https://silentius-satoshi.github.io/ZapTok/",
   "scripts": {
     "dev": "npm i && vite",
-    "build": "npm i && git fetch --unshallow --tags 2>/dev/null || git fetch --tags 2>/dev/null || true && vite build && cp dist/index.html dist/404.html",
+    "build": "npm i && vite build && cp dist/index.html dist/404.html",
     "test": "npm i && tsc -p tsconfig.app.json --noEmit && eslint && vitest run && vite build",
     "test:nuts": "node src/test/nuts-compliance.test.js",
     "test:p2pk": "node src/test/p2pk-format.test.js",
