ci(test): enable automated testing for developmental branch
Add developmental branch to test workflow triggers to run automated
tests on every push and pull request.

Changes:
- Added developmental to push branches trigger
- Added developmental to pull_request branches trigger
- Ensures code quality checks run before merging to main

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "developmental" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main", "developmental" ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
