--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job
+  # Build and deploy job
+  # Note: Testing is handled by test.yml workflow
+  # Use branch protection rules to require test.yml to pass before merging to main
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -36,7 +38,7 @@ jobs:
 
       - name: Install dependencies and build
         run: |
-          npm install
+          npm ci
           npm run build
           cp dist/index.html dist/404.html
 
